# PhoneTable

./: AppendForm.qml  CMakeLists.txt  main.cpp  main.qml  qml.qrc
inc/: DBManager.h  Entries.h  EntriesModel.h  EntriesRef.h  Entry.h  ModelManager.h  Validate.h
src/: DBManager.cpp  Entries.cpp  EntriesModel.cpp  EntriesRef.cpp  ModelManager.cpp  Validate.cpp
test/: all_unit_tests.cpp
